Fix visibilty for typeahead to avoid collisions with modal

--- a/packages/uikit-default/src/sass/scss/components/_tools.scss
+++ b/packages/uikit-default/src/sass/scss/components/_tools.scss
@@ -42,7 +42,7 @@
      * Tools dropdown list
      */
     &.pl-is-active {
-        height: 100vh;
+        overflow: visible;
     }
 }
 
